# testmgcan

./: .gitignore  .replit  DEPENDENCIES.md  Dashboard_User_Manual.md  ENCRYPTED_SECRETS_GUIDE.md  QUICKSTART_ENCRYPTED_SECRETS.md  README.md  SECRETS_SETUP.md  app.py  app_secrets_integration.py  auth.py  camarilla_calculator.py  config.py  cookies.txt  cpr_calculator.py  env.example  fibonacci_calculator.py  google_auth.py  historical_data.py  instagram_marketing_page.html  integrated_browser_dashboard.html  main.py  manage_secrets.py  models.py  modified_landing_page.html  note.txt  ohlc_storage.py  pyproject.toml  replit.md  requirements-reference.txt  secrets.encrypted.json  secrets.json.template  secrets_manager.py  symbols_loader.py  technical_indicators.py  test_calculations.py  upload_hist_365.py  web_browser.html  websocket_manager.py  weekly_cpr_calculator.py  (+2 more)
js/: app.js
static/css/: custom.css  revolutionary.css
static/js/: table-sorter.js
templates/: account.html  admin_camarilla.html  admin_coupons.html  admin_cpr.html  admin_database.html  admin_fibonacci.html  admin_hist_data_365.html  admin_historical.html  admin_login.html  admin_minute_data.html  admin_panel.html  admin_plans.html  admin_tokens.html  admin_users.html  all_charts.html  dashboard.html  hist_auth.html  hist_data_365_download.html  index.html  landing.html  legal.html  live_chart.html  login.html  mg_linecharts.html  mgheatmap.html  minute_hist_data_download.html  preview_instagram.html  subscription_required.html  technical_indicators.html  volume_profile.html  weekly_dashboard.html
